# EE

./: README.md
EE/src/trans/: trans.cpp  trans.hpp
EE/src/zou/: zou.cpp  zou.hpp
Zou/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  configure.ac  configure.ac~
Zou/autom4te.cache/: output.1  traces.0  traces.1
Zou/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  zone.cpp  zone.hpp  zou.cpp  zou.hpp
Zou/src/.deps/: zou-trans.Po  zou-zou.Po
c++/: make.sh
c++/globals/: globals.hpp
c++/mnemo/: trans.cpp
dia/: Diagramme1.dia
ocamltopd/: net.ml  sounds_backend.ml
pd/: effet-rien.pd  effet-voldiv2.pd  groupe-effet.pd  groupespat.pd  maillon-effet.pd  receiver.pd  simplenoise.pd  simpleosc.pd  spatialisation.pd  transition.pd  wrap-abs.pd  wrapper.pd
postgreSQL/: DD_EE.sql  DM_EE.sql  EE.sql  test.sql
supercollider/: main.sc  prout.scd  startup.scd
supercollider/classes/: EE_Groups.sc  Sonic.sc
