AC_INIT([EE], [1.0], [yarl-baudig@mailoo.org])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LEX
AC_PROG_YACC
AC_LANG([C++])
AM_MAINTAINER_MODE([enable])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_FILES([Makefile src/Makefile src/interpreter/Makefile])
AC_OUTPUT
